--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,6 @@
     <link href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" rel="stylesheet" />
 
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="A Software Engineer working at 𝗖𝗵𝘂𝗯𝗯 India, having an overall experience of 1.5+ years in web application development. He is an engineering graduate from Anna University, Chennai and is an ardent fan of technology and loves to play around with them. He loves cooking, listening to songs, playing games and tutoring."
-    />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>𝙰𝚗𝚐𝚕𝚎𝚜𝚟𝚊𝚛 𝙲𝚑𝚊𝚗𝚍𝚛𝚊𝚜𝚎𝚔𝚊𝚛 𝙰𝚙𝚙𝚒𝚢𝚊</title>
+    <title>Ashwinkumar Manimaran</title>
     <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
 </head>
 
